--- a/ijs/ijs.html
+++ b/ijs/ijs.html
@@ -1,3 +1,4 @@
+<html><head> <meta charset="UTF-8">
 <script src="ijs.js"></script>
 <script>
 
@@ -7,36 +8,36 @@ index.bulk_index('id_0',["jack jack"]);
 index.bulk_index('id_1',["asdas"]);
 index.bulk_index('id_2',["jack doe"]);
 index.bulk_index('id_3',["jack doe moe"]);
-index.bulk_index('id_4',["jack doe joe red green moe"]);
+index.bulk_index('id_4',["jack doe joe red green moe кирилица"]);
 
 index.search(new BoolMustQuery()
              .add(index.term_query("jack"))
              .add(index.term_query("doe"))
-             .add(new BoolShouldQuery()
+             .add(new BoolMustQuery()
                   .add(index.term_query("moe"))
                   .add(new BoolShouldQuery()
                        .add(index.term_query("red"))
                        .add(index.term_query("green")))),function(id,score) {
-    console.log("must id: " + id + " score: " + score);
+    console.log("jack doe AND (moe OR (red OR green) ): " + id + " score: " + score);
 },3);
 
 var q = new BoolMustQuery().add(index.term_query("moe")).add(new BoolShouldQuery().add(index.term_query("jack")));
 index.search(q,function(id,score) {
-    console.log("must id: " + id + " score: " + score);
-},3);
-
-/*
-index.search(new BoolShouldQuery().add(index.term_query("ас")).add(index.term_query("jac")),function(id,score) {
-    console.log("id: " + id + " score: " + score);
-},3);
-
-
-index.search(index.match_query("jack"),function(id,score) {
-    console.log("id: " + id + " score: " + score);
+    console.log("jack OR moe: " + id + " score: " + score);
 },3);
 
 index.search(index.match_query(""),function(id,score) {
-    console.log("id: " + id + " score: " + score);
+    console.log("empty: " + id + " score: " + score);
 },3);
-*/
+index.search(index.match_query("jack"),function(id,score) {
+    console.log("jack: " + id + " score: " + score);
+},3);
+
+index.search(new BoolShouldQuery().add(index.term_query("кирилица")).add(index.term_query("jack")),function(id,score) {
+    console.log("cyr OR jack: " + id + " score: " + score);
+},3);
+
+
+
 </script>
+</html>
